Fix social icon spacing for IE11

--- a/css/sass/layout/_resume.scss
+++ b/css/sass/layout/_resume.scss
@@ -9,11 +9,13 @@
 
   h2 {
     border-bottom: 1px solid var(--border-color);
+    color: var(--heading-color);
     font-size: $font__size--m;
 
     /* ie fix */
     @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
       border-bottom: 1px solid c('black');
+      color: c('black');
     }
   }
   .title {
